# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2017-05-31 mmichaud <m.michael.michaud@orange.fr>
  * ExtractPointsPlugIn : keep original feature id in attribute

2017-05-20 Giuseppe Aruta
  * Task Frame title shows also projection description if it is set
    and matches any value available into srid.txt SRS registry file

2017-05-10 Giuseppe Aruta
  * Added TaskProperty plugin to read and modify project properties

* release 1.11 *****************************************************************

2017-04-05 mmichaud <m.michael.michaud@orange.fr>
  * Improve MakeValidOp robustness

2017-04-01 mmichaud <m.michael.michaud@orange.fr>
  * Fix #458 Improve RasterImageLayerPropertiesPlugIn speed

2017-03-31 mmichaud <m.michael.michaud@orange.fr>
  * Fix a regression in RasterImageLayerPropertiesPlugIn
  * Fix #456 possible NPE in AutoAssignAttributePlugIn

2017-03-26 Giuseppe Aruta 
  * Updated CadTools extension to ver. 0.2

2017-03-26 mmichaud <m.michael.michaud@orange.fr>
  * Add Matching extension to OpenJUMP PLUS distribution

2017-03-20 mmichaud <m.michael.michaud@orange.fr>
  * Fix a robustess problem in MakeValidOp

2017-03-19 ede
  * fix WFS in PLUS not working due too i18n error

2017-03-14 mmichaud <m.michael.michaud@orange.fr>
  * upgrade to jumpjgrapht 0.7.1 (fix a bug related to empty geometries)
  * improve how MultiInputDialog is resized (let JTextArea increase its size)

2017-03-13 mmichaud <m.michael.michaud@orange.fr>
  * Small improvements in UpdateWithJoinPlugIn
  * Fix a NullPointerException in Dissolve2PlugIn (ConcatenateUnique)

2017-03-12 ede
  * fix regression "#455 UI problem with decimal parameters and Locale" 
    rendering MultiInputDialog based plugins using decimal values unusable for 
    locales formatting decimal number w/ comma instead of dot